--- a/src/app/components/employee/employee.component.html
+++ b/src/app/components/employee/employee.component.html
@@ -215,30 +215,66 @@
                     formGroup.get('dateOfEmployment')?.touched ||
                     isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
             </div>
-            <div class="form-group">
-                <label for="workplace" [class.text-danger]="formGroup.get('workplaceId')?.invalid && 
+            <!-- <div class="form-group">
+                <label for="workplaceId" [class.text-danger]="formGroup.get('workplaceId')?.invalid && 
                 (formGroup.get('workplaceId')?.dirty ||
                 formGroup.get('workplaceId')?.touched ||
                 isSubmitted)">Radno mesto</label>
                 <input type="text" class="form-control" [class.is-invalid]="formGroup.get('workplaceId')?.invalid && 
                 (formGroup.get('workplaceId')?.dirty ||
                 formGroup.get('workplaceId')?.touched ||
-                isSubmitted)" id="workplace" placeholder="Unesite radno mesto" formControlName="workplaceId">
+                isSubmitted)" id="workplaceId" placeholder="Unesite radno mesto" formControlName="workplaceId">
+                <span *ngIf="formGroup.get('workplaceId')?.hasError('required') && 
+                (formGroup.get('workplaceId')?.dirty ||
+                formGroup.get('workplaceId')?.touched ||
+                isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
+            </div> -->
+            <div class="form-group">
+                <label for="workplaceId" [class.text-danger]="formGroup.get('workplaceId')?.invalid && 
+                (formGroup.get('workplaceId')?.dirty ||
+                formGroup.get('workplaceId')?.touched ||
+                isSubmitted)">Radno mesto</label>
+                <select class="form-select" [class.is-invalid]="formGroup.get('workplaceId')?.invalid && 
+                (formGroup.get('workplaceId')?.dirty ||
+                formGroup.get('workplaceId')?.touched ||
+                isSubmitted)" id="workplaceId" placeholder="Unesite radno mesto" formControlName="workplaceId">
+                    <option *ngFor="let workplace of workplaces" [value]="workplace.workplaceId">{{
+                        workplace.workplaceName }}</option>
+                </select>
                 <span *ngIf="formGroup.get('workplaceId')?.hasError('required') && 
                 (formGroup.get('workplaceId')?.dirty ||
                 formGroup.get('workplaceId')?.touched ||
                 isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
             </div>
-            <div class="form-group">
-                <label for="organizationalUnit" [class.text-danger]="formGroup.get('organizationalUnitId')?.invalid && 
+            <!-- <div class="form-group">
+                <label for="organizationalUnitId" [class.text-danger]="formGroup.get('organizationalUnitId')?.invalid && 
                 (formGroup.get('organizationalUnitId')?.dirty ||
                 formGroup.get('organizationalUnitId')?.touched ||
                 isSubmitted)">Organizaciona jedinica</label>
                 <input type="text" class="form-control" [class.is-invalid]="formGroup.get('organizationalUnitId')?.invalid && 
                 (formGroup.get('organizationalUnitId')?.dirty ||
                 formGroup.get('organizationalUnitId')?.touched ||
-                isSubmitted)" id="organizationalUnit" placeholder="Unesite organizacionu jedinicu"
+                isSubmitted)" id="organizationalUnitId" placeholder="Unesite organizacionu jedinicu"
                     formControlName="organizationalUnitId">
+                <span *ngIf="formGroup.get('organizationalUnitId')?.hasError('required') && 
+                    (formGroup.get('organizationalUnitId')?.dirty ||
+                    formGroup.get('organizationalUnitId')?.touched ||
+                    isSubmitted)" class="text-danger">Ovo polje je obavezno</span>
+            </div> -->
+            <div class="form-group">
+                <label for="organizationalUnitId" [class.text-danger]="formGroup.get('organizationalUnitId')?.invalid && 
+                (formGroup.get('organizationalUnitId')?.dirty ||
+                formGroup.get('organizationalUnitId')?.touched ||
+                isSubmitted)">Organizaciona jedinica</label>
+                <select class="form-select" [class.is-invalid]="formGroup.get('organizationalUnitId')?.invalid && 
+                (formGroup.get('organizationalUnitId')?.dirty ||
+                formGroup.get('organizationalUnitId')?.touched ||
+                isSubmitted)" id="organizationalUnitId" placeholder="Unesite organizacionu jedinicu"
+                    formControlName="organizationalUnitId">
+                    <option *ngFor="let organizationalUnit of organizationalUnits"
+                        [value]="organizationalUnit.organizationalUnitId">{{
+                        organizationalUnit.organizationalUnitName }}</option>
+                </select>
                 <span *ngIf="formGroup.get('organizationalUnitId')?.hasError('required') && 
                     (formGroup.get('organizationalUnitId')?.dirty ||
                     formGroup.get('organizationalUnitId')?.touched ||
